# vibe-and-sip

./: .gitignore  .prettierignore  package-lock.json  prd-app.md  roadmap.md
.windsurf/rules/: process-task-list.md
backend/: .env.example  README.md  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 23036c00c37f_create_seed_tables.py  a2dd7a4585b2_add_cocktail_detail_fields.py  f4e82e5dbf9c_add_cocktails_rank.py  fc26e01b04be_create_seed_tables.py
backend/app/: __init__.py  db.py  health.py  main.py  models.py  seed.py  settings.py  test_seed.py
backend/tests/: test_cocktails.py  test_health.py  test_vibes.py
frontend/: .eslintrc.cjs  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  main.tsx
frontend/src/components/: AppLayout.recipe-modal.test.tsx  AppLayout.test.tsx  AppLayout.tsx  RecipeDetailModal.test.tsx  RecipeDetailModal.tsx
frontend/src/data/: index.ts  seedData.ts
frontend/src/domain/: difficultyConfig.ts  index.ts  (+1 more)
tasks/: prd-curated-cocktail-results.md  prd-data-seeding-script.md  prd-difficulty-slider.md  prd-domain-models.md  prd-occasion-filter.md  prd-recipe-detail-endpoint.md  prd-recipe-detail-view.md  prd-vibe-list-retrieval.md  prd-vibe-selection-screen.md  tasks-prd-curated-cocktail-results.md  tasks-prd-data-seeding-script.md  tasks-prd-difficulty-slider.md  tasks-prd-domain-models.md  tasks-prd-occasion-filter.md  tasks-prd-recipe-detail-endpoint.md  tasks-prd-recipe-detail-view.md  tasks-prd-vibe-list-retrieval.md  tasks-prd-vibe-selection-screen.md
(+18 files in other folders)
